fix: Addresses spacing underneath error message on landscape mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -24,9 +24,7 @@
 .error-message {
   font-family: 'Modesto-Expanded';
   font-size: xx-large;
-  padding-top: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: 1em;
 }
 
 .error-message {
